# REINVENT4_fitdock

./: CHANGELOG.md  NEWS.md  README.md  install.py  pyproject.toml  pytest.ini
configs/: PARAMS.md  README.md  SCORING.md  enumeration.toml  lib_grow.toml  scoring_components_example.toml
contrib/reinvent-doc/: conf.py  index.md
contrib/reinvent-doc/core_concept/: README.md
contrib/reinvent-doc/tutorials/: README.md  monitoring.md
contrib/reinvent_plugins/components/: README.md  comp_molscore.py
contrib/reinvent_plugins/components/config/: scoring_molscore.toml
contrib/tutorials/NaviDiv/: README.md
contrib/tutorials/NaviDiv/examples/app/: run_app.sh  (+2 more)
notebooks/: Reinvent_TLRL.py  Reinvent_demo.py
reinvent/: Reinvent.py  validation.py  version.py
reinvent/chemistry/: conversions.py
reinvent/datapipeline/: preprocess.py
reinvent/datapipeline/filters/: chem.py
reinvent/models/reinvent/: utils.py
reinvent/models/reinvent/models/: dataset.py  rnn.py
reinvent/notebooks/: utils.py
reinvent/runmodes/: __init__.py  handler.py  setup_sampler.py
reinvent/runmodes/RL/: learning.py  run_staged_learning.py  validation.py
reinvent/runmodes/RL/reports/: tensorboard.py
reinvent/runmodes/TL/: learning.py  reinvent.py  run_transfer_learning.py  validation.py
reinvent/runmodes/create_model/: create_reinvent.py
reinvent/runmodes/enumeration/: aa_enumerator.py  run_enumeration.py  validation.py
reinvent/runmodes/samplers/: libinvent.py  linkinvent.py  mol2mol.py  reinvent.py  run_sampling.py  sampler.py  validation.py
reinvent/scoring/: compute_scores.py  scorer.py
reinvent/utils/: __init__.py  cli.py  config_parse.py  helpers.py  hw_report.py  logmon.py
reinvent_plugins/components/: FitDock.py  comp_chemprop.py  comp_chemprop2.py  comp_external_process.py  comp_scorefitdock.py  component_results.py
reinvent_plugins/components/OpenEye/rocs/: rocs_similarity.py
reinvent_plugins/components/RDKit/: comp_matching_substructure.py  comp_mol_volume.py  comp_rdkit_descriptors.py
reinvent_plugins/components/maize/: comp_maize.py
reinvent_plugins/components/synthsense/: comp_synthsense.py  endpoints.py  runner.py
support/: compute_database_precedence.py
tests/: conftest.py
tests/chemistry/: test_conversions_extended.py  test_general_chemistry.py
tests/chemistry/fixtures/: __init__.py  paths.py
tests/chemistry/library_design/reaction_filters/: test_non_selective_filter_no_reaction.py  test_non_selective_reaction_filter.py  test_selective_reaction_filter.py  test_selective_reaction_filter_single_reaction.py
tests/chemistry/standardization/: base_rdkit_standardizer.py
tests/datapipeline/: test_deduplicate.py  test_percent.py  test_regex_branches.py  test_unwanted_tokens.py
tests/models/integration_tests/pepinvent/: test_likelihood.py  test_pepinvent_model.py
tests/models/unit_tests/pepinvent/: fixtures.py  test_likelihood.py  test_pepinvent_model.py
tests/models/unit_tests/reinvent/: test_meta_data.py  test_model_functions.py  test_vocabulary.py
tests/models/unit_tests/utils/: test_parallelize.py
tests/reinvent_plugins/unit_tests/: test_comp_external_process.py  test_normalizers.py
tests/reinvent_plugins/unit_tests/components/: test_comp_mmp.py  test_comp_results_extended.py  test_comp_ringprecedence.py
tests/runmodes/unit_tests/: test_aa_enumerator.py  test_bucket_counter.py  test_distance_penalty.py  test_diversity_filter.py  test_inception_memory.py  test_intrinsic_penalties.py  test_remote_reporter.py  test_scaffold_similarity.py  test_tabfile_reader.py  test_terminators.py  test_validate_smiles.py
tests/scoring/unit_tests/: test_compute_scores.py  test_compute_transform.py  test_parsing.py  test_scorer.py  test_scorer_pipeline.py  test_scoring_utils.py  test_transforms.py
tests/utils/: test_config_parse.py
(+62 files in other folders)
