[project]
name = "reinvent"  # Normalized according to https://packaging.python.org/en/latest/specifications/name-normalization/
description = "Reinvent 4"
authors = [{name = "AstraZeneca"}]
maintainers = [{name = "Hannes Löffler", email = "hannes.loeffler@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = [
  "reinvent",
  "de novo drug design",
  "ai",
  "artificial intelligence",
  "molecules",
  "molecule generation",
  "linker design",
  "generative ai",
  "chemistry",
  "medicinal chemistry",
  "computational chemistry",
  "cheminformatics",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Typing :: Typed",
]

dynamic = ["version"]

# We go quite defensive and add upper bounds,
# in case major version updates break backward compatibility.
dependencies = [
  "torch==2.12.0", # requires --extra-index-url https://download.pytorch.org/whl/cu126 where cu126 may need to be replaced with a suitable CUDA version
  "torchvision",  # needs to match torch
  "tensorboard >=2,<3",
  "rdkit >=2025.09.1",
  "numpy >=2,<3",
  "pumas >=1.3.0",  # altenative scoring transforms and aggregations
  "molvs >=0.1.1,<0.2",  # old standardizer, still used by transformer code
  "xxhash >=3,<4",
  "pydantic >=2,<3",
  "python-dotenv >=1.0,<2",
  "matplotlib >=3.7,<4",  # optional, for some tensorboard images
  "apted >=1.0.3, <2",  # SynthSense scoring plugin
  "mmpdb >=2.1,<3",  # Matched molecular pair scoring plugin
  "pandas >=3,<4",
  "polars <2",  # needed by data pipeline
  "Pillow >=12.2.0",
  "PyYAML >=6.0",
  "requests >=2.28,<3",  # only needed for remote logger
  "tqdm >=4.64,<5",
  "pytest >=9.0.3",
  "pytest-mock >=3",
]


[project.optional-dependencies]

chemprop1 = [
  "chemprop >=1.5.2,<1.6",
  "descriptastorus >=2.6.1,<3.0", # Hidden chemprop dependency
]

chemprop2 = [
  "chemprop >=2, <3"
]

openeye = [
  "OpenEye-toolkits >=2024"  # requires --extra-index-url=https://pypi.anaconda.org/OpenEye/simple
]

isim = [
  "iSIM@git+https://git@github.com/mqcomplab/iSIM.git"
]

all = [
    "reinvent[openeye,isim]",
]


[project.scripts]
reinvent = "reinvent.Reinvent:main_script"
reinvent_datapre = "reinvent.datapipeline.preprocess:main_script"


[project.urls]
homepage = "https://github.com/MolecularAI"
repository = "https://github.com/MolecularAI/REINVENT4,git"
public-repository = "https://github.com/MolecularAI/REINVENT4,git"


[tool.setuptools]
include-package-data = true


[tool.setuptools.dynamic.version]
attr = "reinvent.version.__version__"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = [".", "configs"]
include = ["reinvent*"]
namespaces = true


[tool.setuptools.package-data]
"*" = ["*.pkl.gz"]


[tool.black]
line-length = 100


[tool.uv]
index-strategy = "unsafe-best-match"
conflicts = [
  [
    { extra = "chemprop1" },
    { extra = "chemprop2" },
  ]
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "openeye"
url = "https://pypi.anaconda.org/OpenEye/simple"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch" }]
torchvision = [{ index = "pytorch" }]
OpenEye-toolkits = [{ index = "openeye" }]
